Fixed spacing errors part2

--- a/css/custom_style.css
+++ b/css/custom_style.css
@@ -34,7 +34,7 @@ li{
 }
 .word_boxes{
   height: 100px;
-  width:760px;
+  width:1000px;
 }
 #title-header{
   position: relative;
@@ -73,8 +73,4 @@ li{
 #ALIGN_AWARDS{
   width: 50%;
   margin: 0 auto;
-}
-#EXPERIENCE{
-  height: 100px;
-  width:800px;
 }
